# dymas

./: .gitignore  .gitmodules  Makefile  Snakefile  inc_filenames.py  inc_proc.py  inc_progs.py  readme.md  requirements.txt
c/: __check_all.sh  __update_c_progs.sh  _experiment.sh  _load_config.sh  copy_reports.sh  count_bam.sh  create_alternative_reference.sh  create_config.sh  dmap_reads__simulation_dynamic_with_unmapping.sh  dmap_reads__simulation_static.sh  experiment.sh  make_experiment_statistics.sh  map_reads.sh  simulate_reads.sh
call_variants/: CMakeLists.txt  call_variants  call_variants.cpp
docs/: simulation_pipeline.odg
docs/S1_file/: Makefile  S1_file.tex  runs_scheme.odg
dymas/: requirements.txt  setup.cfg
dymas/dymas/: Chain.py  Chain_Chainer.py  Consensus.py  Consensus_BcfTools.py  Consensus_Cpp.py  Consensus_Py.py  (+22 more)
experiments/: .gitignore  Makefile  Makefile.default  aux__copy_reports.sh  aux__duplicate_experiment.py  aux__synchronize_experiments.sh  borrelia_conf.py  conf_exp1.py  conf_exp2.py  conf_exp3.py  conf_exp4.py  conf_exp5.py  conf_exp6.py  conf_global.py  convert_svg2pdf.sh  copy_experiment.py  global_conf.py  human_conf.py  results_edit_distance.tsv  run.mk  run_all.sh  tuberculosis_conf.py  view_tsv.sh
misc/: pipeline.odg
misc/deprec/call_consensus_cpp/: CMakeLists.txt
old_files/: Snakefile  conf.json
reports/: Makefile
script/: deploy_smbl_programs.sh  gnuplot5
scripts/: alt_ref.sh  bam_operations_stats.py  map_reads.sh  randomize_reads_fq.py  run_dwgsim_ref.sh  run_edit_distances.sh  run_updates.sh  smbl_executor.sh
(+7065 files in other folders)
